event-reporter / statefulset: changed env CODEFRESH_SSL_CERT_PATH

--- a/charts/argo-cd/templates/event-reporter/statefulset.yaml
+++ b/charts/argo-cd/templates/event-reporter/statefulset.yaml
@@ -104,7 +104,7 @@ spec:
           {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef }}
             {{- $name := .Values.global.codefresh.tls.caCerts.secret.create | ternary "codefresh-tls-certs" .Values.global.codefresh.tls.caCerts.secretKeyRef.name }}
             {{- $key := .Values.global.codefresh.tls.caCerts.secret.create | ternary (default "ca-bundle.crt" .Values.global.codefresh.tls.caCerts.secret.key) .Values.global.codefresh.tls.caCerts.secretKeyRef.key }}
-          - name: CODEFRESH_SSL_CERT_FILE
+          - name: CODEFRESH_SSL_CERT_PATH
             value: /app/config/codefresh-tls-certs/{{ $key }}
           {{- end }}
           # todo: clean up
@@ -224,7 +224,7 @@ spec:
           successThreshold: {{ .Values.eventReporter.readinessProbe.successThreshold }}
           failureThreshold: {{ .Values.eventReporter.readinessProbe.failureThreshold }}
         resources:
-          {{- toYaml .Values.eventReporter.resources | nindent 10 }}
+          {{- toYaml .Values.eventReporter.resources | nindent 12 }}
         {{- with .Values.eventReporter.containerSecurityContext }}
         securityContext:
           {{- toYaml . | nindent 10 }}
