--- a/charts/argo-workflows/templates/server/server-deployment.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment.yaml
@@ -95,7 +95,7 @@ spec:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: metadata.namespace
-            - name: ARGO_BASE_HREF
+            - name: BASE_HREF
               value: {{ .Values.server.baseHref | quote }}
           {{- with .Values.server.extraEnv }}
             {{- toYaml . | nindent 12 }}
