fix(argo-workflows): revert `BASE_HREF` change (#2770)
* fix(argo-workflows): revert `BASE_HREF` change

This reverts commit 134cecde5812612514995205cd8fcc6a7f933373.

Sorry, I screwed up this and caused a regression. Didn't read my own release notes (from 4 months ago to be fair) where `ARGO_BASE_HREF` would not work previously as it was inconsistently `ARGO_BASEHREF`. So there is no forward compatible change to be made here, so just revert this.

Will have to reinstate this change for the 3.6 upgrade

Signed-off-by: Anton Gilgur <agilgur5@gmail.com>

* changelog update

Signed-off-by: Anton Gilgur <agilgur5@gmail.com>

---------

Signed-off-by: Anton Gilgur <agilgur5@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.7
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.41.8
+version: 0.41.9
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: changed BASE_HREF to ARGO_BASE_HREF for forward compat
+      description: reverted the BASE_HREF change, will add back during 3.6 upgrade
