--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -19,6 +19,9 @@ metadata:
   {{- end }}
 type: Opaque
 stringData:
+  {{- if $cluster_value.shard }}
+  shard: {{ $cluster_value.shard }}
+  {{- end }}
   name: {{ required "A valid .Values.configs.clusterCredentials.CLUSTERNAME.name entry is required!" $cluster_key }}
   server: {{ required "A valid .Values.configs.clusterCredentials.CLUSTERNAME.server entry is required!" $cluster_value.server }}
   {{- if $cluster_value.namespaces }}
