feat(argo-cd): Add secrettemplate to argo-cd server certificate (#2780)
* Add secrettemplate to argo-cd server certificate

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

* refactor documentation

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

* added changelog

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

* remove empty line

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

* correct comment in values file

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

* move documentation comment according to test results

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

---------

Signed-off-by: Ims, Julie <juliebergeims@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2029,6 +2029,8 @@ server:
     # -- Usages for the certificate
     ### Ref: https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.KeyUsage
     usages: []
+    # -- Annotations that allow the certificate to be composed from data residing in existing Kubernetes Resources
+    secretTemplateAnnotations: {}
 
   # TLS certificate configuration via Secret
   ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/tls/#tls-certificates-used-by-argocd-server
