--- a/charts/argo-cd/templates/argocd-server/certificate.yaml
+++ b/charts/argo-cd/templates/argocd-server/certificate.yaml
@@ -20,7 +20,7 @@ spec:
       {{ $key }}: {{ $value | quote }}
       {{- end }}
     {{- end }} 
-  secretName: {{ .Values.server.certificate.secretName }}
+  secretName: argocd-server-tls
   commonName: {{ .Values.server.certificate.domain | default .Values.global.domain }}
   dnsNames:
     - {{ .Values.server.certificate.domain | default .Values.global.domain }}
