--- a/charts/argo-events/templates/argo-events-controller/config.yaml
+++ b/charts/argo-events/templates/argo-events-controller/config.yaml
@@ -17,6 +17,7 @@ data:
           metricsExporterImage: {{ .metricsExporterImage }}
         {{- end }}
       {{- end }}
+      {{- if .Values.configs.jetstream.versions }}
       jetstream:
         # Default JetStream settings, could be overridden by EventBus JetStream specs
         settings: |
@@ -32,51 +33,6 @@ data:
           replicas: {{ .Values.configs.jetstream.streamConfig.replicas }}
           duplicates: {{ .Values.configs.jetstream.streamConfig.duplicates }}
         versions:
-        - version: latest
-          natsImage: nats:2.10.10
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
-          configReloaderImage: natsio/nats-server-config-reloader:0.14.0
-          startCommand: /nats-server
-        - version: 2.8.1
-          natsImage: nats:2.8.1
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: /nats-server
-        - version: 2.8.1-alpine
-          natsImage: nats:2.8.1-alpine
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: nats-server
-        - version: 2.8.2
-          natsImage: nats:2.8.2
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: /nats-server
-        - version: 2.8.2-alpine
-          natsImage: nats:2.8.2-alpine
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: nats-server
-        - version: 2.9.1
-          natsImage: nats:2.9.1
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: /nats-server
-        - version: 2.9.12
-          natsImage: nats:2.9.12
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: /nats-server
-        - version: 2.9.16
-          natsImage: nats:2.9.16
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
-          configReloaderImage: natsio/nats-server-config-reloader:0.7.0
-          startCommand: /nats-server
-        - version: 2.10.10
-          natsImage: nats:2.10.10
-          metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
-          configReloaderImage: natsio/nats-server-config-reloader:0.14.0
-          startCommand: /nats-server
         {{- range .Values.configs.jetstream.versions }}
         - version: {{ .version }}
           natsImage: {{ .natsImage }}
@@ -84,3 +40,4 @@ data:
           configReloaderImage: {{ .configReloaderImage }}
           startCommand: {{ .startCommand }}
         {{- end }}
+      {{- end }}
