--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -94,13 +94,53 @@ configs:
       replicas: 3
       # -- Not documented at the moment
       duplicates: 300s
-    # -- Additional Supported versions of JetStream eventbus
-    versions: []
-      # - version: latest
-      #   natsImage: nats:2.10.10
-      #   metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
-      #   configReloaderImage: natsio/nats-server-config-reloader:0.14.0
-      #   startCommand: /nats-server
+    # Supported versions of JetStream eventbus
+    versions:
+      - version: latest
+        natsImage: nats:2.10.10
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
+        configReloaderImage: natsio/nats-server-config-reloader:0.14.0
+        startCommand: /nats-server
+      - version: 2.8.1
+        natsImage: nats:2.8.1
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: /nats-server
+      - version: 2.8.1-alpine
+        natsImage: nats:2.8.1-alpine
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: nats-server
+      - version: 2.8.2
+        natsImage: nats:2.8.2
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: /nats-server
+      - version: 2.8.2-alpine
+        natsImage: nats:2.8.2-alpine
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: nats-server
+      - version: 2.9.1
+        natsImage: nats:2.9.1
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: /nats-server
+      - version: 2.9.12
+        natsImage: nats:2.9.12
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: /nats-server
+      - version: 2.9.16
+        natsImage: nats:2.9.16
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.9.1
+        configReloaderImage: natsio/nats-server-config-reloader:0.7.0
+        startCommand: /nats-server
+      - version: 2.10.10
+        natsImage: nats:2.10.10
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.14.0
+        configReloaderImage: natsio/nats-server-config-reloader:0.14.0
+        startCommand: /nats-server
 
 # -- Array of extra K8s manifests to deploy
 ## Note: Supports use of custom Helm templates
