fix(argo-rollouts): Add subscriptions into notifcations-configmap
Signed-off-by: Jaime Pérez Halcón <jphalcon@gmail.com>

--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -19,4 +19,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Bump argo-rollouts to v1.7.0
+      description: Add subscriptions into notifications-configmap
