feat(argo-rollouts): update as following upstream
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -120,6 +120,7 @@ controller:
   #  limits:
   #    cpu: 100m
   #    memory: 128Mi
+  #    ephemeral-storage: 1Gi
   #  requests:
   #    cpu: 50m
   #    memory: 64Mi
