fix(argo-rollouts): Add subscriptions into notifcations-configmap (#2793)
* fix(argo-rollouts): Add subscriptions into notifcations-configmap

Signed-off-by: Jaime Pérez Halcón <jphalcon@gmail.com>

* fix(argo-rollouts): Set version

Signed-off-by: Jaime Pérez Halcón <jphalcon@gmail.com>

* fix(argo-rollouts): Updated readme

Signed-off-by: Jaime Pérez Halcón <jphalcon@gmail.com>

* fix(values.yaml): fixed trailing spaces

Signed-off-by: Jaime Pérez Halcón <jphalcon@gmail.com>

---------

Signed-off-by: Jaime Pérez Halcón <jphalcon@gmail.com>
Co-authored-by: Aikawa <yu.croco@gmail.com>

--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.7.0
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.36.1
+version: 2.36.2
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 keywords:
@@ -19,4 +19,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Add annotations for notifications secret
+      description: Add subscriptions into notifications-configmap
