Fix of Argo Rollouts notifications subscription
Signed-off-by: Yurii Bychenok <bychenok.y@ajax.systems>

--- a/charts/argo-rollouts/templates/controller/notifcations-configmap.yaml
+++ b/charts/argo-rollouts/templates/controller/notifcations-configmap.yaml
@@ -17,6 +17,6 @@ data:
     {{- toYaml . | nindent 2 }}
   {{- end }}
   {{- with .Values.notifications.subscriptions }}
-  subscriptions:
+  subscriptions: |
     {{- toYaml . | nindent 4 }}
   {{- end }}
