--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -482,8 +482,8 @@ notifications:
 
   # -- The subscriptions define the subscriptions to the triggers in a general way for all rollouts
   subscriptions: {}
-    # subscriptions:
-    #   recipients:
-    #     - slack:<channel>
+    # - recipients:
+    #   - slack:<channel>
     #   triggers:
-    #     - on-rollout-completed
+    #   - on-rollout-completed
+    #   - on-rollout-aborted
