--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -481,7 +481,7 @@ notifications:
     #     when: rollout.spec.template.spec.containers[0].image == 'argoproj/rollouts-demo:purple'
 
   # -- The subscriptions define the subscriptions to the triggers in a general way for all rollouts
-  subscriptions: {}
+  subscriptions: []
     # - recipients:
     #   - slack:<channel>
     #   triggers:
