fix(argo-rollouts): Fix of global subscriptions for Argo Rollouts (#2797)
* Fix of Argo Rollouts notifications subscription

Signed-off-by: Yurii Bychenok <bychenok.y@ajax.systems>

* Fixed Argo Rollouts helm changelog

Signed-off-by: Yurii Bychenok <bychenok.y@ajax.systems>

* Fixed Argo Rollouts helm default values.yaml

Signed-off-by: Yurii Bychenok <bychenok.y@ajax.systems>

* Fixed Argo Rollouts doc after helm update

Signed-off-by: Yurii Bychenok <bychenok.y@ajax.systems>

---------

Signed-off-by: Yurii Bychenok <bychenok.y@ajax.systems>
Signed-off-by: Aikawa <yu.croco@gmail.com>
Co-authored-by: Aikawa <yu.croco@gmail.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -482,9 +482,9 @@ notifications:
     #     when: rollout.spec.template.spec.containers[0].image == 'argoproj/rollouts-demo:purple'
 
   # -- The subscriptions define the subscriptions to the triggers in a general way for all rollouts
-  subscriptions: {}
-    # subscriptions:
-    #   recipients:
-    #     - slack:<channel>
+  subscriptions: []
+    # - recipients:
+    #   - slack:<channel>
     #   triggers:
-    #     - on-rollout-completed
+    #   - on-rollout-completed
+    #   - on-rollout-aborted
