feat(argocd-image-updater): configure gitCommitSigningKey and gitCommitSignOff
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -133,6 +133,12 @@ config:
   # -- Changing the Git commit message
   gitCommitTemplate: ""
 
+  # -- Path to public SSH key mounted in container, or GPG key ID used to sign commits
+  gitCommitSigningKey: ""
+
+  # -- Enables sign off on commits
+  gitCommitSignOff: false
+
   # -- Argo CD Image Update log level
   logLevel: "info"
 
