fix(argocd-image-updater): add missing attribute
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argocd-image-updater/templates/configmap.yaml
+++ b/charts/argocd-image-updater/templates/configmap.yaml
@@ -37,6 +37,9 @@ data:
   {{- with .Values.config.gitCommitSignOff }}
   git.commit-sign-off: {{ . | quote }}
   {{- end }}
+  {{- with .Values.config.gitCommitSigningMethod }}
+  git.commit-signing-method: {{ . | quote }}
+  {{- end }}
   kube.events: {{ .Values.config.disableKubeEvents | quote }}
   {{- with .Values.config.registries }}
   registries.conf: |
