--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -139,6 +139,9 @@ config:
   # -- Enables sign off on commits
   gitCommitSignOff: false
 
+  # -- Method used to sign Git commits. `openpgp` or `ssh`
+  gitCommitSigningMethod: ""
+
   # -- Argo CD Image Update log level
   logLevel: "info"
 
