fix(argo-workflows): add clusterrole to avoid workflow-controller errors

--- a/charts/argo-workflows/templates/controller/workflow-controller-cluster-roles.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-cluster-roles.yaml
@@ -70,6 +70,13 @@ rules:
   - delete
   - create
 - apiGroups:
+    - argoproj.io
+  resources:
+    - workflowtasksets/status
+    - workflowartifactgctasks/status
+  verbs:
+    - patch
+- apiGroups:
   - argoproj.io
   resources:
   - workflowtemplates
