--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.8
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.41.11
+version: 0.41.12
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Add `app:` label to components to match upstream
+      description: add ClusterRole permission to avoid workflow-controller errors with HTTP template
