--- a/charts/argo-rollouts/templates/controller/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrole.yaml
@@ -67,6 +67,7 @@ rules:
   - get
   - list
   - watch
+  - update
 # services patch needed to update selector of canary/stable/active/preview services
 # services create needed to create and delete services for experiments
 - apiGroups:
@@ -109,7 +110,7 @@ rules:
 {{- if .Values.providerRBAC.providers.gatewayAPI }}
   - create
   - update
-{{- end }}  
+{{- end }}
 # pod list/update needed for updating ephemeral data
 - apiGroups:
   - ""
