--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Address inconsistent redis-secret-init ServiceAccount handling
+      description: Removed obsolete /usr/local/bin/argocd-server from argocd-server container args
