combined changes from upstream

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -18,3 +18,25 @@ annotations:
   artifacthub.io/changes: |
     - kind: fixed
       description: Add `app:` label to components to match upstream
+    - kind: changed
+      description: Bump argo-workflows to v3.5.8-cap-CR-22608
+    - kind: fixed
+      description: Add missing serviceLabels to server service
+    - kind: fixed
+      description: Correct sample of secondsAfterCompletion
+    - kind: added
+      description: Added option to add service accounts to RoleBindings
+    - kind: changed
+      description: Fix hyphen typo in values.yaml comments
+    - kind: added
+      description: Add the ability to use a headless service for the workflow controller
+    - kind: added
+      description: Check Prometheus CRDs are available before creating Service Monitor resource(s)
+    - kind: added
+      description: Support namespaceOverride
+    - kind: added
+      description: Disable leader election if only 1 repl of the Workflow Controller
+    - kind: fixed
+      description: Add caSecret in the artifactory.s3 configuration values.
+    - kind: fixed
+      description: Update argo-workflows documentation links to readthedocs
