--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v1.7.1
+appVersion: v1.7.2
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
 version: 2.37.2
@@ -20,3 +20,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Added traefik.io apiGroup to Role and ClusterRole
+    - kind: added
+      description: Added setting to disable creation of the notifications ConfigMap
