set application server and repo server address from values for event reporter

--- a/charts/argo-cd/templates/event-reporter/statefulset.yaml
+++ b/charts/argo-cd/templates/event-reporter/statefulset.yaml
@@ -71,6 +71,10 @@ spec:
           {{- with (concat .Values.global.env .Values.eventReporter.env) }}
             {{- toYaml . | nindent 10 }}
           {{- end }}
+          - name: EVENT_REPORTER_APPLICATION_SERVER
+            value: {{ include "argo-cd.eventReporter.argocd-server-adress" . }}
+          - name: EVENT_REPORTER_REPO_SERVER
+            value: {{ include "argo-cd.eventReporter.argocd-repo-server-adress" . }}
           - name: EVENT_REPORTER_REPLICAS
             value: {{ .Values.eventReporter.replicas | quote }}
           - name: ARGOCD_APPLICATION_NAMESPACES
