feat(argocd-image-updater): add a parameter to chose namespaced or clusterwide mode for AIU
Signed-off-by: Sebastien RIBIERE <sebastien.ribiere.ext@jellysmack.com>

--- a/charts/argocd-image-updater/templates/deployment.yaml
+++ b/charts/argocd-image-updater/templates/deployment.yaml
@@ -118,6 +118,12 @@ spec:
                 key: git.commit-sign-off
                 name: argocd-image-updater-config
                 optional: true
+          - name: IMAGE_UPDATER_NAMESPACED
+            valueFrom:
+              configMapKeyRef:
+                key: namespaced
+                name: argocd-image-updater-config
+                optional: true
           {{- with .Values.extraEnv }}
             {{- toYaml . | nindent 10 }}
           {{- end }}
