upd reporter monitoring conditions

--- a/charts/argo-cd/templates/event-reporter/networkpolicy.yaml
+++ b/charts/argo-cd/templates/event-reporter/networkpolicy.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.global.networkPolicy.create }}
+{{- if .Values.global.networkPolicy.create }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
