--- a/charts/argo-cd/templates/event-reporter/metrics.yaml
+++ b/charts/argo-cd/templates/event-reporter/metrics.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.eventReporter.metrics.enabled }}
+{{- if .Values.eventReporter.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
