--- a/charts/argo-cd/templates/event-reporter/statefulset.yaml
+++ b/charts/argo-cd/templates/event-reporter/statefulset.yaml
@@ -102,10 +102,12 @@ spec:
               secretKeyRef:
                 key: token
                 name: codefresh-token
+          {{- if .Values.global.codefresh }}
           {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef }}
             {{- $key := .Values.global.codefresh.tls.caCerts.secret.create | ternary (default "ca-bundle.crt" .Values.global.codefresh.tls.caCerts.secret.key) .Values.global.codefresh.tls.caCerts.secretKeyRef.key }}
           - name: CODEFRESH_SSL_CERT_PATH
             value: /app/config/codefresh-tls-certs/{{ $key }}
+          {{- end }}
           {{- end }}
           # todo: clean up
           - name: EVENT_REPORTER_INSECURE
@@ -233,10 +235,12 @@ spec:
         {{- with .Values.eventReporter.volumeMounts }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
+        {{- if .Values.global.codefresh}}
         {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef}}
         - name: codefresh-tls-certs
           mountPath: /app/config/codefresh-tls-certs
           readOnly: true
+        {{- end }}
         {{- end }}
         - name: argocd-repo-server-tls
           mountPath: /app/config/server/tls
@@ -276,12 +280,14 @@ spec:
       {{- with .Values.eventReporter.volumes }}
         {{- toYaml . | nindent 6 }}
       {{- end }}
+      {{- if .Values.global.codefresh }}
       {{- if or .Values.global.codefresh.tls.caCerts.secret.create .Values.global.codefresh.tls.caCerts.secretKeyRef }}
       - name: codefresh-tls-certs
         secret:
           secretName: {{ .Values.global.codefresh.tls.caCerts.secret.create | ternary "codefresh-tls-certs" .Values.global.codefresh.tls.caCerts.secretKeyRef.name }}
           defaultMode: 420
           optional: true
+      {{- end }}
       {{- end }}
       - emptyDir: { }
         name: plugins-home
