--- a/charts/argo-cd/ci/ha-static-values.yaml
+++ b/charts/argo-cd/ci/ha-static-values.yaml
@@ -11,7 +11,19 @@ server:
 repoServer:
   replicas: 2
 
-# these tests only support vanilla argo-cd
-# do not work for event reporter component
-eventReporter:
-  enabled: false
+# needed for correct work of event reporter component
+extraObjects:
+  - apiVersion: v1
+    kind: Secret
+    metadata:
+      name: argocd-token
+    type: Opaque
+    data:
+      token: c29tZS10ZXN0LXBhc3N3b3Jk # some-test-password
+  - apiVersion: v1
+    kind: Secret
+    metadata:
+      name: codefresh-token
+    type: Opaque
+    data:
+      token: c29tZS10ZXN0LXBhc3N3b3Jk # some-test-password
