argo dev 2.12 arm

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -62,7 +62,7 @@ global:
     # -- If defined, a repository applied to all Argo CD deployments
     repository: xeonalex/personal-argocd-dev
     # -- Overrides the global Argo CD image tag whose default is the chart appVersion
-    tag: 2.12-update-1
+    tag: 2.12-update-1-arm
     # -- If defined, a imagePullPolicy applied to all Argo CD deployments
     imagePullPolicy: IfNotPresent
 
