[repo server] make cf token required when version reporting is enabled

--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -293,7 +293,7 @@ spec:
               secretKeyRef:
                 key: token
                 name: codefresh-token
-                optional: true
+                optional: {{ not .Values.applicationVersioning.enabled }}
           {{- if .Values.repoServer.useEphemeralHelmWorkingDir }}
           - name: HELM_CACHE_HOME
             value: /helm-working-dir
