--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -248,6 +248,8 @@ configs:
     controller.self.heal.timeout.seconds: 5
     # -- Repo server RPC call timeout seconds.
     controller.repo.server.timeout.seconds: 60
+    # -- Sync wave delay seconds to make delay between applications' sync
+    controller.sync.wave.delay: 2
 
     ## Server properties
     # -- Run server without TLS
