feat(argo-workflows): Add honorLabels parameter to Argo Workflows ServiceMonitor (#2920)
* Update workflow-controller-servicemonitor.yaml

Signed-off-by: venegator <m.venega94@gmail.com>

* Update values.yaml

Signed-off-by: venegator <m.venega94@gmail.com>

* Update Chart.yaml

Signed-off-by: venegator <m.venega94@gmail.com>

* Update README.md

Signed-off-by: venegator <m.venega94@gmail.com>

* Update charts/argo-workflows/Chart.yaml

Co-authored-by: kiblik <5609770+kiblik@users.noreply.github.com>
Signed-off-by: venegator <m.venega94@gmail.com>

* Update workflow-controller-servicemonitor.yaml

Signed-off-by: venegator <m.venega94@gmail.com>

---------

Signed-off-by: venegator <m.venega94@gmail.com>
Co-authored-by: kiblik <5609770+kiblik@users.noreply.github.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-servicemonitor.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-servicemonitor.yaml
@@ -24,6 +24,7 @@ spec:
       metricRelabelings:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      honorLabels: {{ .Values.controller.metricsConfig.honorLabels }}
   {{- end }}
   {{- if .Values.controller.telemetryConfig.enabled }}
     - port: telemetry
@@ -37,6 +38,7 @@ spec:
       metricRelabelings:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      honorLabels: {{ .Values.controller.metricsConfig.honorLabels }}
   {{- end }}
   {{- with .Values.controller.metricsConfig.targetLabels }}
   targetLabels:
