--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,8 @@
     "**/charts/argo-cd/Chart.yaml",
     "**/charts/argo-events/Chart.yaml",
     "**/charts/argo-rollouts/Chart.yaml",
-    "**/charts/argocd-image-updater/Chart.yaml"
+    "**/charts/argocd-image-updater/Chart.yaml",
+    "**/.github/workflows/renovate.yaml"
   ],
   "customManagers": [
     {
