feat: conditional namespace support to ClusterRoleBinding
Signed-off-by: leehosu <hosu4549@gmail.com>

--- a/charts/argo-cd/templates/argocd-application-controller/clusterrolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/clusterrolebinding.yaml
@@ -13,4 +13,11 @@ subjects:
 - kind: ServiceAccount
   name: {{ include "argo-cd.controller.serviceAccountName" . }}
   namespace: {{ include "argo-cd.namespace" . }}
+{{- if .Values.configs.params.applicationsetcontroller.namespaces }}
+{{- range .Values.configs.params.applicationsetcontroller.namespaces }}
+- kind: ServiceAccount
+  name: {{ include "argo-cd.controller.serviceAccountName" $root }}
+  namespace: {{ . }}
+{{- end }}
+{{- end }}
 {{- end }}
