--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -279,6 +279,12 @@ configs:
     # -- Enables use of the Progressive Syncs capability
     applicationsetcontroller.enable.progressive.syncs: false
 
+    # When specifying multiple namespaces, specify them in array form
+    applicationsetcontroller.namespaces: []
+    # - namespace1
+    # - namespace2
+    # - namespace3
+
     # -- Enables [Applications in any namespace]
     ## List of additional namespaces where applications may be created in and reconciled from.
     ## The namespace where Argo CD is installed to will always be allowed.
