Compliance with pr rules
Signed-off-by: leehosu <hosu4549@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -26,5 +26,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Remove unwanted newline on redis-init-secret job's imagepullsecrets
+    - kind: feat
+      description: Add conditional handling of multiple namespaces in ClusterRoleBinding for ApplicationSet controller.
