feat: support multiple namespaces in ClusterRoleBinding using comma-separated string
Signed-off-by: leehosu <hosu4549@gmail.com>

--- a/charts/argo-cd/templates/argocd-application-controller/clusterrolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/clusterrolebinding.yaml
@@ -14,10 +14,10 @@ subjects:
   name: {{ include "argo-cd.controller.serviceAccountName" . }}
   namespace: {{ include "argo-cd.namespace" . }}
 {{- if .Values.configs.params.applicationsetcontroller.namespaces }}
-{{- range .Values.configs.params.applicationsetcontroller.namespaces }}
+{{- range (split "," .Values.configs.params.applicationsetcontroller.namespaces) }}
 - kind: ServiceAccount
   name: {{ include "argo-cd.controller.serviceAccountName" $root }}
-  namespace: {{ . }}
+  namespace: {{ . | trim }}
 {{- end }}
 {{- end }}
 {{- end }}
