chore: clear namespaces field by setting to an empty string
Signed-off-by: leehosu <hosu4549@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -280,7 +280,8 @@ configs:
     applicationsetcontroller.enable.progressive.syncs: false
 
     # When specifying multiple namespaces, specify them as a comma-separated string
-    applicationsetcontroller.namespaces: "namespace1, namespace2"
+    # e.g., "namespace1, namespace2"
+    applicationsetcontroller.namespaces: ""
 
     # -- Enables [Applications in any namespace]
     ## List of additional namespaces where applications may be created in and reconciled from.
