--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -279,8 +279,7 @@ configs:
     # -- Enables use of the Progressive Syncs capability
     applicationsetcontroller.enable.progressive.syncs: false
 
-    # When specifying multiple namespaces, specify them as a comma-separated string
-    # e.g., "namespace1, namespace2"
++    # -- A list of glob patterns specifying where to look for ApplicationSet resources. (e.g. `"namespace1, namespace2"`)
     applicationsetcontroller.namespaces: ""
 
     # -- Enables [Applications in any namespace]
