change a values about namespace
Signed-off-by: leehosu <hosu4549@gmail.com>

--- a/charts/argo-cd/templates/argocd-applicationset/clusterrolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/clusterrolebinding.yaml
@@ -15,7 +15,7 @@ subjects:
     namespace: {{ include "argo-cd.namespace" . }}
 {{- $namespaces := index .Values.configs.params "applicationsetcontroller.namespaces" -}}
 {{- range $namespace := (split "," $namespaces) }}
-  {{- if $namespaces }}
+  {{- if $namespace }}
   - kind: ServiceAccount
     name: {{ include "argo-cd.applicationSet.serviceAccountName" $ }}
     namespace: {{ $namespace | trim | quote }}
