feat(argo-cd): add multi-namespace support for ApplicationSet controller RBAC (#2935)
* feat(argo-cd): support multiple namespaces in applicationsetcontroller

Signed-off-by: leehosu <hosu4549@gmail.com>

* fetch upstream

Signed-off-by: leehosu <hosu4549@gmail.com>

* update README

Signed-off-by: leehosu <hosu4549@gmail.com>

* change a values about namespace

Signed-off-by: leehosu <hosu4549@gmail.com>

---------

Signed-off-by: leehosu <hosu4549@gmail.com>

--- a/charts/argo-cd/templates/argocd-applicationset/clusterrolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/clusterrolebinding.yaml
@@ -13,4 +13,12 @@ subjects:
   - kind: ServiceAccount
     name: {{ template "argo-cd.applicationSet.serviceAccountName" . }}
     namespace: {{ include "argo-cd.namespace" . }}
+{{- $namespaces := index .Values.configs.params "applicationsetcontroller.namespaces" -}}
+{{- range $namespace := (split "," $namespaces) }}
+  {{- if $namespace }}
+  - kind: ServiceAccount
+    name: {{ include "argo-cd.applicationSet.serviceAccountName" $ }}
+    namespace: {{ $namespace | trim | quote }}
+  {{- end }}
+{{- end }}
 {{- end }}
