feat: support acr controller in our chart

--- a/charts/argo-cd/templates/acr-controller/clusterrole.yaml
+++ b/charts/argo-cd/templates/acr-controller/clusterrole.yaml
@@ -12,15 +12,15 @@ rules:
     {{- toYaml .Values.acrController.clusterRoleRules.rules | nindent 2 }}
   {{- else }}
   - apiGroups:
-    - '*'
+      - argoproj.io
     resources:
-    - '*'
+      - applications
     verbs:
-    - '*'
-  - nonResourceURLs:
-    - '*'
-    verbs:
-    - '*'
-  {{- end }}
+      - get
+      - list
+      - watch
+      - patch
+      - update
+{{- end }}
 {{- end }}
 {{- end }}
